[fix] unhandled state